Mejorando la presentación
Se completó los archivos html trabajados en clase para poder tener una mejor idea de los elementos html estudiados.
Principalmente se mejoró el archivo sede.html, con tablas e imágenes

--- a/index.html
+++ b/index.html
@@ -1,28 +1,42 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Mi primera página</title>
 </head>
+
 <body>
     <h1>Copa Mundial de Fútbol de 2018</h1>
-    <p>La Copa Mundial de la FIFA Rusia 2018 (en ruso: Чемпионат мира по футболу Россия 2018) será la vigésima primera edición de la Copa Mundial de Fútbol. Esta edición del evento se realizará en Rusia entre el 14 de junio y el 15 de julio de 2018, siendo la primera vez que un país de Europa Oriental organiza el campeonato. </p>
+    <p>La Copa Mundial de la FIFA Rusia 2018 (en ruso: Чемпионат мира по футболу Россия 2018) será la vigésima primera edición
+        de la Copa Mundial de Fútbol. Esta edición del evento se realizará en Rusia entre el 14 de junio y el 15 de julio
+        de 2018, siendo la primera vez que un país de Europa Oriental organiza el campeonato. </p>
     <!-- <a href=""><table></table></a> -->
     <a name="subir"></a>
     <table border="1" width="100%">
         <tr>
-            <td width="60%">
+            <td width="60%" valign="top">
                 <h2>Índice</h2>
                 <ol>
-                    <li><a href="#eleccion">Elección del pais anfitrión</a></li>
-                    <li><a href="#organizacion">Organización</a></li>
+                    <li>
+                        <a href="#eleccion">Elección del pais anfitrión</a>
+                    </li>
+                    <li>
+                        <a href="#organizacion">Organización</a>
+                    </li>
                     <ul type="none">
-                        <li>2.1&nbsp;<a href="sedes.html">Sedes</a></li>
-                        <li>2.2 Lista de árbitros</li>
+                        <li>2.1&nbsp;
+                            <a href="sedes.html">Sedes</a>
+                        </li>
+                        <li>2.2&nbsp;
+                            <a href="#arbitros">Lista de árbitros</a>
+                        </li>
                     </ul>
-                    <li start="3">Formato de competición</li>
+                    <li start="3">
+                        <a href="#eleccion">Formato de competición</a>
+                    </li>
                     <li>Equipos participantes</li>
                     <ul type="none">
                         <li>4.1 Sorteo de Clasificatoria</li>
@@ -32,22 +46,10 @@
                 </ol>
             </td>
             <td align="right" valign="top">
-                <img src="img/estadio1.jpg" title="Estadio de Rusia" height="200"    width="250">
+                <img src="img/estadio1.jpg" title="Estadio de Rusia" height="100%" width="100%">
             </td>
         </tr>
-
     </table>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
     <br>
     <fieldset>
         <a name="eleccion"></a>
@@ -56,15 +58,53 @@
         <p>La FIFA decidió que la elección de la sede de la Copa Mundial de Fútbol de 2018 se efectuara en conjunto con la de 2022 en la reunión del Comité Ejecutivo del organismo, realizado en Zúrich, Suiza, el 2 de diciembre de 2010.2​</p>
 
         <p>De acuerdo al sistema de rotación continental implementado por la FIFA, las asociaciones miembro o asociadas a la CAF y la CONMEBOL se encontraban vetadas para participar de esta candidatura. En consecuencia, Rusia presentó su candidatura oficialmente junto a las de Japón, Corea del Sur, Australia, Bélgica-Países Bajos, Inglaterra, España-Portugal, Estados Unidos y Qatar.3​ Finalmente, Australia, Japón, Corea del Sur, Catar y Estados Unidos se retiraron algunos meses antes de la decisión para concentrarse en la elección de 2022.4​</p>
-                
+
         <p>En la primera ronda de la votación, Inglaterra alcanzó dos votos, Países Bajos-Bélgica obtuvo cuatro, España-Portugal llegó a los siete y Rusia se alzó con nueve. Al no alcanzar ninguno la mayoría necesaria de doce, Inglaterra fue eliminado por ser el candidato con menos respaldo y fue necesaria una segunda ronda. Aquí Rusia consiguió trece sobre los siete que recibió la dupla ibérica y los dos que recibió la candidatura Bélgica-Países Bajos.5​</p>
-                
+
         <p>Tras la elección, Vladímir Putin, el entonces primer ministro ruso, aseguró que «Rusia 2018 será fantástico» y proyectó la construcción de nuevos estadios y la presencia de «las más altas normativas de calidad».6​7​ Por su parte, Blatter realizó el viaje protocolar al país seleccionado y aseguró «que se producirá una cooperación maravillosa entre la FIFA y Rusia».</p>
     </fieldset>
     <fieldset>
-        <legend><a name="organizacion">Organización</a></legend>
+        <legend>
+            <a name="organizacion">Organización</a>
+        </legend>
         <a href="#subir">Subir</a>
-        <p>La organización del torneo quedó a cargo del Comité Organizador Local (COL) de Rusia 2018, presidido por el ministro ruso de deportes Vitali Mutkó. El consejo de administración, que se desprende del COL, presenta como presidente a Vladímir Putin, entonces primer ministro ruso y a Igor Shuvalov, viceprimer ministro ruso, como vicepresidente. Por su parte, Alexey Sorokin auspicia de Consejero Delegado del Comité Organizador.</p>
+        <p>La organización del torneo quedó a cargo del Comité Organizador Local (COL) de Rusia 2018, presidido por el ministro ruso de deportes Vitali Mutkó. El consejo de administración, que se desprende del COL, presenta como presidente a Vladímir Putin, entonces primer ministro ruso y a Igor Shuvalov, viceprimer ministro ruso, como vicepresidente.</p>
+        <p>Por su parte, Alexey Sorokin auspicia de Consejero Delegado del Comité Organizador.</p>
+    </fieldset>
+    <fieldset>
+        <legend>
+            <a name="arbitros">Lista de Árbitros</a>
+        </legend>
+        <a href="#subir">Subir</a>
+        <p>La FIFA anunció una lista de 36 árbitros, provenientes de las 6 confederaciones continentales. A ella deben sumarse 63 árbitros asistentes y los colegiados que formarán parte del equipo de videoarbitraje (VAR).15​16​ Se indica entre paréntesis el número de ediciones en que han participado anteriormente.</p>
+    </fieldset>
+    <fieldset>
+        <legend>
+            <a name="formato">Formato de Competición</a>
+        </legend>
+        <a href="#subir">Subir</a>
+        <p>Los 32 equipos que participan en la fase final se dividen en 8 grupos de 4 equipos cada uno. Los grupos se juegan
+            por el sistema de todos contra todos, a una sola rueda. De esta manbera, cada equipo disputa tres partidos.</p>
+        <p> Pasan a la siguiente ronda los dos equipos de cada grupo mejor ubicados en la tabla de posiciones final. El orden
+            de clasificación se determina teniendo en cuenta los siguientes criterios, en orden de preferencia: </p>
+        <ol>
+            <li>El mayor número de puntos obtenidos.</li>
+            <li>La mayor diferencia de goles</li>
+            <li>El mayor número de goles a favor.</li>
+        </ol>
+        <p>Si dos o más equipos quedan igualados según los criterios anteriores, se usarán los siguientes criterios:</p>
+        <ol>
+            <li>El mayor número de puntos obtenidos en los partidos entre los equipos en cuestión.</li>
+            <li>La mayor diferencia de goles en esos mismos enfrentamientos.</li>
+            <li>El mayor número de goles anotados por cada equipo en los partidos disputados entre sí.</li>
+            <li>Sorteo del comité organizador de la Copa Mundial.</li>
+        </ol>
+        <p>La segunda ronda incluye todas las fases desde los octavos de final hasta la final. El ganador de cada partido pasa
+            a la siguiente fase, y el perdedor queda eliminado. Los equipos perdedores de las semifinales juegan un partido
+            por el tercer puesto. En el partido final, el ganador obtiene la Copa del Mundo. </p>
+        <p>En todas las instancias finales, si el partido termina empatado se juega un tiempo suplementario. Si el resultado
+            sigue igualado tras la prórroga, se define con tiros desde el punto penal.</p>
     </fieldset>
 </body>
+
 </html>
