--- a/sedes.html
+++ b/sedes.html
@@ -1,18 +1,190 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Sedes</title>
 </head>
+
 <body>
     <h1>SEDES</h1>
-    <p>Rusia confirmó 12 estadios en 11 ciudades para el mundial: Ekaterimburgo, Kaliningrado, Kazán, Moscú, Nizhni Nóvgorod, Rostov del Don, San Petersburgo, Samara, Saransk, Sochi y Volgogrado, las cuales albergarán los 64 partidos de la Copa Mundial.</p>
+    <p>Rusia confirmó 12 estadios en 11 ciudades para el mundial: Ekaterimburgo, Kaliningrado, Kazán, Moscú, Nizhni Nóvgorod,
+        Rostov del Don, San Petersburgo, Samara, Saransk, Sochi y Volgogrado, las cuales albergarán los 64 partidos de la
+        Copa Mundial.</p>
 
-    <p>De los 12 estadios designados, solo dos estaban totalmente terminados al momento de su elección como sede, los cuales debieron ser remodelados para que pudieran albergar los partidos. Otro, el Spartak en Moscú, se inauguró en agosto de 2014. Los demás, incluido el Luzhnikí en esa misma capital y con capacidad para 81 300 espectadores (sede principal y el estadio más grande), se comenzaron a construir en años posteriores.</p>
-            
-    <p>Como una forma de reducir las distancias, los tiempos y los costos de traslados de los equipos, se escogieron solo ciudades que se encuentran en la parte europea del país (la más densamente poblada y desarrollada), a excepción de Ekaterimburgo, que se encuentra en Asia justo al este de los Montes Urales.</p>
-    <a href="index.html#organizacion">Regresar</a>
+    <p>De los 12 estadios designados, solo dos estaban totalmente terminados al momento de su elección como sede, los cuales
+        debieron ser remodelados para que pudieran albergar los partidos. Otro, el Spartak en Moscú, se inauguró en agosto
+        de 2014. Los demás, incluido el Luzhnikí en esa misma capital y con capacidad para 81 300 espectadores (sede principal
+        y el estadio más grande), se comenzaron a construir en años posteriores.</p>
+
+    <p>Como una forma de reducir las distancias, los tiempos y los costos de traslados de los equipos, se escogieron solo ciudades
+        que se encuentran en la parte europea del país (la más densamente poblada y desarrollada), a excepción de Ekaterimburgo,
+        que se encuentra en Asia justo al este de los Montes Urales.</p>
+    <a href="index.html">Regresar</a>
+    <hr>
+    <table border="1" width="80%" align='center'>
+        <tr>
+            <td colspan="2" align='center'>Moscú</td>
+            <td align='center'>San Petersburgo</td>
+            <td align='center'>Kaliningrado</td>
+        </tr>
+        <tr>
+            <td align="center" colspan="2">
+                <img src="img/Flag_of_Moscow.svg"> Moscú (UTC+03:00)</td>
+            <td align="center">
+                <img src="img/Flag_of_Leningrad_Oblast.svg"> Óblast de Leningrado (UTC+03:00)</td>
+            <td align="center">
+                <img src="img/Flag_of_Kaliningrad_Oblast.svg"> Óblast de Kaliningrado (UTC+02:00)</td>
+        </tr>
+        <tr>
+            <td align="center">Estadio Luzhniki</td>
+            <td align="center">Otkrytie Arena</td>
+            <td align="center">Estadio de San Petersburgo</td>
+            <td align="center">Estadio de Kaliningrado</td>
+        </tr>
+        <tr>
+            <td align="center">Capacidad:
+                <strong>81 300</strong>
+            </td>
+            <td align="center">Capacidad:
+                <strong>46 990</strong>
+            </td>
+            <td align="center">Capacidad:
+                <strong>69 500</strong>
+            </td>
+            <td align="center">Capacidad:
+                <strong>35 000</strong>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <img src="img/Luzhniki_Stadium2.jpg" width="100%" height="100%">
+            </td>
+            <td>
+                <img src="img/Stadium_Spartak_in_Moscow.jpg" width="100%" height="100%">
+            </td>
+            <td>
+                <img src="img/Spb_06-2017_img42_Krestovsky_Stadium.jpg" width="100%" height="100%">
+            </td>
+            <td>
+                <img src="img/Kaliningrad_05-2017_img73_new_stadium.jpg" width="100%" height="100%">
+            </td>
+        </tr>
+        <tr>
+            <td align="center">Kazán</td>
+            <td colspan="2" rowspan="10" width="500px">
+                <img src="img/European_Russia.svg" width="100%">
+            </td>
+            <td align="center">Nizhni Nóvgorod</td>
+        </tr>
+        <tr>
+            <td align="center">
+                <img src="img/Flag_of_Tatarstan.svg">República de Tartaristán (UTC+03:00)>
+            </td>
+            <td align="center">
+                <img src="img/Flag_of_Nizhny_Novgorod_Region.svg">Óblast de Nizhni Nóvgorod (UTC+03:00)
+            </td>
+        </tr>
+        <tr>
+            <td align="center">Kazán Arena</td>
+            <td align="center">Estadio de Nizhni Nóvgorod</td>
+        </tr>
+        <tr>
+            <td align="center">Capacidad:
+                <strong>45 105</strong>
+            </td>
+            <td align="center">Capacidad:
+                <strong>44 899</strong>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <img src="img/Казань_арена.jpg" width="100%" height="100%">
+            </td>
+            <td>
+                <img src="img/Construction_of_Nizhny_Novgorod_Stadium.jpg" width="100%" height="100%">
+            </td>
+        </tr>
+        <tr>
+            <td align="center">Samara</td>
+            <td align="center">Volgogrado</td>
+        </tr>
+        <tr>
+            <td align="center">
+                <img src="img/Flag_of_Samara_Oblast.svg">Óblast de Samara (UTC+04:00)
+            </td>
+            <td align="center">
+                <img src="img/Flag_of_Volgograd_Oblast.svg">Óblast de Volgogrado (UTC+03:00)
+            </td>
+        </tr>
+        <tr>
+            <td align="center">Samara Arena</td>
+            <td align="center">Volgogrado Arena</td>
+        </tr>
+        <tr>
+            <td align="center">Capacidad:
+                <strong>44 918</strong>
+            </td>
+            <td align="center">Capacidad:
+                <strong>45 015</strong>
+            </td>
+        </tr>
+        <tr>
+            <td>&nbsp;</td>
+            <td>
+                <img src="img/Volgograd_Arena.jpg" width="100%" height="100%">
+            </td>
+        </tr>
+        <tr>
+            <td align='center'>Saransk</td>
+            <td align='center'>Rostov del Don</td>
+            <td align='center'>Sochi</td>
+            <td align='center'>Ekaterimburgo</td>
+        </tr>
+        <tr>
+            <td align="center">
+                <img src="img/Flag_of_Mordovia.svg">República de Mordovia (UTC+03:00)
+            </td>
+            <td align="center">
+                <img src="img/Flag_of_Rostov_Oblast.svg">Óblast de Rostov (UTC+03:00)
+            </td>
+            <td align="center">
+                <img src="img/Flag_of_Krasnodar_Krai.svg">Krai de Krasnodar (UTC+03:00)
+            </td>
+            <td align="center">
+                <img src="img/Flag_of_Sverdlovsk_Oblast.svg">Óblast de Sverdlovsk (UTC+05:00)
+            </td>
+        </tr>
+        <tr>
+            <td align="center">Capacidad:
+                <strong>45 015</strong>
+            </td>
+            <td align="center">Capacidad:
+                <strong>43 702</strong>
+            </td>
+            <td align="center">Capacidad:
+                <strong>47 659</strong>
+            </td>
+            <td align="center">Capacidad:
+                <strong>35 000</strong>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <img src="img/Mordovia-Arena_stadium(building).jpg" width="100%" height="100%">
+            </td>
+            <td>
+                <img src="img/Rostov_Arena2018.jpg" width="100%" height="100%">
+            </td>
+            <td>
+                <img src="img/Fisht_Olympic_Stadium_2017.jpg" width="100%" height="100%">
+            </td>
+            <td>
+                <img src="img/Estadio_Central.jpg" width="100%" height="100%">
+            </td>
+        </tr>
+    </table>
 </body>
 </html>
